methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:2: error: '(' expected but identifier found.
def hunt() {while estSurBiscuit == false {
                  ^SlugHunting:17: error: illegal start of simple expression
}
^